deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: statuspage
spec:
  selector:
    app: statuspage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
