deployment/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: statuspage
spec:
  host: statuspage.apps.example.com
  port:
    targetPort: 3000
  to:
    kind: Service
    name: statuspage
